--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,313 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* 
+### Body Copy
+
+- Homepage Items: 14px
+- Detail Page: 16px  */
+
+.dark-theme {
+  --element-bg: hsl(209, 23%, 22%);
+  --body-bg: hsl(207, 26%, 17%);
+  --text-bg: hsl(0, 0%, 100%);
+  --input-bg: #fff;
+
+  --border-radius: 5px;
+  --test-border: 1px solid red;
+  --theme-transition: all ease-in 0.2s;
+
+  --box-shadow: 0rem 0rem 0.3rem 0rem rgba(0, 0, 0, 0.3);
+}
+.light-theme {
+  --element-bg: hsl(0, 0%, 100%);
+  --body-bg: hsl(0, 0%, 98%);
+  --text-bg: hsl(200, 15%, 8%);
+  --input-bg: hsl(0, 0%, 52%);
+
+  --border-radius: 5px;
+  --test-border: 1px solid red;
+  --theme-transition: all ease-in 0.2s;
+
+  --box-shadow: 0rem 0rem 0.3rem 0rem rgba(0, 0, 0, 0.3);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  color: var(--text-bg);
+  text-decoration: none;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: var(--body-bg);
+}
+
+html {
+  font-size: clamp(0.8rem, 1vw, 2rem);
+  color: var(--text-bg);
+}
+img {
+  height: 100%;
+  max-width: 100%;
+  display: block;
+}
+header {
+  background-color: var(--element-bg);
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem 1.3rem;
+  transition: var(--theme-transition);
+  box-shadow: var(--box-shadow);
+}
+.icons-container span {
+  margin-left: 0.3rem;
+}
+.moon-icon {
+  display: flex;
+  align-items: center;
+}
+
+.search-header {
+  padding: 0 1.5rem;
+  transition: var(--theme-transition);
+  margin-bottom: 2rem;
+}
+.form-section {
+  padding: 1.5rem 0;
+  width: 100%;
+}
+
+.form-container {
+  position: relative;
+}
+
+.search-field {
+  width: 100%;
+  height: 100%;
+  padding: 0.8rem;
+  padding-left: 10%;
+  border: none;
+  outline: none;
+  transition: var(--theme-transition);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+  background-color: var(--element-bg);
+  color: var(--text-bg);
+}
+.search-field:hover,
+.search-field:focus {
+  border: 1px solid var(--body-bg);
+}
+
+.search-icon {
+  position: absolute;
+  color: var(--input-bg);
+  background-color: transparent;
+  border: none;
+  top: 50%;
+  left: 3%;
+  transform: translateY(-50%);
+}
+
+.filter-container {
+  width: 60%;
+}
+.select {
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+  background-color: var(--element-bg);
+}
+.select:focus,
+.select:hover {
+  border: 1px solid var(--body-bg);
+}
+@media screen and (min-width: 500px) {
+  .search-header {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .search-header {
+    padding: 0 4rem;
+  }
+  .search-header {
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .form-container {
+    width: 70%;
+  }
+  .filter-container {
+    width: 40%;
+  }
+}
+.section-center {
+  transition: var(--theme-transition);
+}
+
+.render-section {
+  padding: 0.5rem 2rem;
+  display: flex;
+  min-height: 80vh;
+}
+.country-cards {
+  height: fit-content;
+}
+.card {
+  border-radius: var(--border-radius);
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+  box-shadow: var(--box-shadow);
+  min-width: 15rem;
+  min-height: 20rem;
+}
+
+.card-details {
+  padding: 1.8rem 1rem;
+  height: 45%;
+  border-radius: var(--border-radius);
+}
+.card-details {
+  background-color: var(--element-bg);
+}
+.card-img-container {
+  height: 55%;
+}
+.card-img-container img {
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+}
+.info {
+  font-weight: 600;
+}
+@media screen and (min-width: 500px) {
+  .render-section {
+    display: flex;
+    padding: 0 3rem;
+  }
+  .country-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .card {
+    max-width: 47.5%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .card {
+    max-width: 45%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .card {
+    max-width: 30%;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .card {
+    max-width: 24%;
+    min-width: 24%;
+  }
+}
+
+.details-section {
+  padding: 0 1rem;
+  transition: var(--theme-transition);
+}
+.return-btn {
+  width: 6rem;
+  padding: 0.3em 1.5em;
+  margin: 1.5rem 0 3rem 0rem;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  background-color: var(--element-bg);
+  box-shadow: var(--box-shadow);
+}
+
+.detail-img {
+  border-radius: 0px;
+  margin-bottom: 2rem;
+}
+
+.det-title {
+  margin: 3rem 0 1.5rem 0;
+  font-size: 1.5rem;
+}
+
+.details-section p {
+  margin-bottom: 1rem;
+}
+.definition {
+  font-weight: 600;
+}
+.detail-bottom {
+  margin: 2rem 0;
+}
+
+.border {
+  background-color: var(--element-bg);
+  box-shadow: var(--box-shadow);
+  display: inline-block;
+  width: 4rem;
+  text-align: center;
+  margin-right: 1rem;
+}
+@media screen and (min-width: 600px) {
+  .detail-img {
+    max-width: 40rem;
+  }
+  .detail-img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .details-section {
+    padding: 1rem 6rem;
+  }
+  .details-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .detail-img {
+    flex-basis: 50%;
+    margin-bottom: 0;
+  }
+  .detail-info {
+    flex-basis: 40%;
+  }
+  .details-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .details-border {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+}
+.error {
+  border: 1px solid green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 2rem;
+  text-align: center;
 }
